--- a/client/package.json
+++ b/client/package.json
@@ -17,9 +17,11 @@
     "openai": "^4.95.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-modal": "^3.16.3",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -47,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/trusted-types": "^2.0.7"
   }
 }
