--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "openai": "^4.52.2"
+    "firebase-admin": "^13.3.0",
+    "openai": "^4.52.2",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
