--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "Backend proxy server for MilestoneAI",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "bun run server.js",
+    "dev": "bun --watch server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,18 +13,18 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "axios": "^1.8.4",
+    "@google/generative-ai": "^0.24.1",
+    "axios": "^1.10.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "firebase-admin": "^13.3.0",
-    "openai": "^4.52.2",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "firebase-admin": "^13.4.0",
     "serverless-http": "^3.2.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "nodemon": "^3.1.4",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.23",
+    "nodemon": "^3.1.10",
     "typescript": "^5.8.3"
   }
 }
