--- a/milestone-ai-t3/package.json
+++ b/milestone-ai-t3/package.json
@@ -22,6 +22,9 @@
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.51.0",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.69.0",
     "@trpc/client": "^11.0.0",
